--- a/portfolio.html
+++ b/portfolio.html
@@ -341,6 +341,29 @@
             </li>
           </ul>
         </div>
+        <div>
+          <p class="signup-call">Подпишитесь на рассылку</p>
+          <form name="signup-form" class="signup-form">
+            <div class="signup-thumb">
+              <label for="signup-id"></label>
+              <input
+                type="email"
+                name="signup-email"
+                class="signup-input"
+                placeholder="E-mail"
+                id="signup-id"
+              />
+              <button type="submit" class="signup-button">
+                Подписаться
+                <svg class="icon-send" width="24" height="24">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-icon-send"
+                  ></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
