--- a/index.html
+++ b/index.html
@@ -531,12 +531,13 @@
           <p class="signup-call">Подпишитесь на рассылку</p>
           <form name="signup-form" class="signup-form">
             <div class="signup-thumb">
-              <label for="signup-email"></label>
+              <label for="signup-id"></label>
               <input
                 type="email"
                 name="signup-email"
                 class="signup-input"
                 placeholder="E-mail"
+                id="signup-id"
               />
               <button type="submit" class="signup-button">
                 Подписаться
@@ -556,64 +557,77 @@
       <div class="modal">
         <p class="reqest-form-call">Оставьте свои данные, мы вам перезвоним</p>
         <form class="request-form" name="request-form">
-          <div class="form-field">
-            <label for="username" class="form-label">Имя</label>
-            <input type="text" class="form-input" name="username" required />
+          <label class="form-field">
+            <span class="form-label">Имя</span>
             <span class="icon-field">
-              <svg class="icon-person-input" width="18" height="18">
+              <input type="text" class="form-input" name="username" required />
+              <svg class="icon-input" width="18" height="18">
                 <use
                   href="./images/icons.svg/symbol-defs.svg#icon-person-input"
                 ></use>
               </svg>
             </span>
-          </div>
+          </label>
 
-          <div class="form-field">
-            <label for="phone-number" class="form-label">Телефон</label>
-            <input type="tel" class="form-input" name="phone-number" required />
+          <label class="form-field">
+            <span class="form-label">Телефон</span>
             <span class="icon-field">
-              <svg class="icon-phone-input" width="18" height="18">
+              <input
+                type="text"
+                class="form-input"
+                name="phone-number"
+                required
+              />
+              <svg class="icon-input" width="18" height="18">
                 <use
                   href="./images/icons.svg/symbol-defs.svg#icon-phone-input"
                 ></use>
               </svg>
             </span>
-          </div>
+          </label>
 
-          <div class="form-field">
-            <label for="request-email" class="form-label">Почта</label>
-            <input
-              type="email"
-              class="form-input"
-              name="request-email"
-              required
-            />
+          <label class="form-field">
+            <span class="form-label">Почта</span>
             <span class="icon-field">
-              <svg class="icon-email-input" width="18" height="18">
+              <input
+                type="text"
+                class="form-input"
+                name="request-email"
+                required
+              />
+              <svg class="icon-input" width="18" height="18">
                 <use
                   href="./images/icons.svg/symbol-defs.svg#icon-email-input"
                 ></use>
               </svg>
             </span>
-          </div>
+          </label>
 
-          <div class="form-field">
-            <label for="comment" class="form-label">Комментарий</label>
+          <label class="form-field form-comment">
+            <span class="form-label">Комментарий</span>
             <textarea
               name="comment"
-              class="form-input form-comment"
+              class="form-input form-textarea"
               placeholder="Введите текст"
             ></textarea>
-          </div>
+          </label>
 
-          <div class="form-field">
-            <input type="checkbox" name="agreement" required />
-            <label for="agreement"
-              >Соглашаюсь с рассылкой и принимаю Условия договора
-            </label>
-          </div>
+          <label class="checkbox-label">
+            <input
+              class="checkbox-input visually-hidden"
+              type="checkbox"
+              name="checkbox"
+              required
+            />
+            <span class="custom-checkbox"></span>
+            <span class="checkbox-title"
+              >Соглашаюсь с рассылкой и принимаю
+              <a href class="agreement">Условия договора</a>
+            </span>
+          </label>
           <button type="submit" class="submit-button">Отправить</button>
         </form>
+
         <button class="close-button" data-modal-close>
           <svg class="close-button-icon" width="18" height="18">
             <use
